# vrchat-log-extractor

./: Cargo.toml
.github/workflows/: cd-rust-windows.yaml  cd-rust.yaml  ci-rust.yaml
src/: main.rs
